--- a/date/2025-08/page-3.htm
+++ b/date/2025-08/page-3.htm
@@ -184,16 +184,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-node-share-links.htm" title="VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-142421.htm" title="Mac用户必看：Clash控制台消失的终极解决指南">Mac用户必看：Clash控制台消失的终极解决指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -205,7 +205,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
