--- a/free-nodes/2025-9-4-vpn-github.htm
+++ b/free-nodes/2025-9-4-vpn-github.htm
@@ -165,16 +165,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-vpn.htm" title="VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
-                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
-                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-node-share-links.htm" title="VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
