--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -526,16 +526,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
-                        <li class="py-2"><a href="/news/article-143838.htm" title="全面解析：Clash 电脑版32位下载安装与配置全攻略">全面解析：Clash 电脑版32位下载安装与配置全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-147859.htm" title="V2Ray问题解决终极指南：从入门到精通的全方位排障手册">V2Ray问题解决终极指南：从入门到精通的全方位排障手册</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
                     </ul>
     </div>
 </div>
@@ -547,7 +547,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
